flux/apps/forgejo-code/forgejo-data.yaml
---
# https://doc.traefik.io/traefik/v3.1/routing/providers/kubernetes-crd/#kind-ingressroute
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: forgejo-data
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure # name from traefik port
  tls:
    secretName: tls-forgejo-data-ingress-http
  routes:
    - match: Host(`data.forgejo.org`)
      kind: Rule
      priority: 1000
      services:
        - name: noop@internal
          kind: TraefikService
      middlewares:
        - name: forgejo-data-redirect
---
# https://doc.traefik.io/traefik/middlewares/http/redirectregex/
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forgejo-data-redirect
spec:
  redirectRegex:
    regex: ^https://data\.forgejo\.org/(.*)
    replacement: https://code.forgejo.org/${1}
